solvers/fsiRK4Foam/log.log
Making dependency list for source file fsiRK4Foam.C
SOURCE=fsiRK4Foam.C ;  g++ -m64 -Dlinux64 -DWM_DP -Wno-deprecated -Wall -Wextra -Wno-unused-parameter -Wnon-virtual-dtor -Wunused-local-typedefs -Werror -Wredundant-decls -Wcast-align -Wmissing-declarations  -Wswitch-enum -Winvalid-pch -Wredundant-decls -Wformat=2 -Wmissing-format-attribute -Wformat-nonliteral -O3  -DNoRepository -ftemplate-depth-200 -std=c++11     -I../../fluidSolidInteraction/lnInclude     -I../../ThirdParty/eigen3     -I/home/khw32/foam/foam-extend-4.0/src/finiteVolume/lnInclude     -I/home/khw32/foam/foam-extend-4.0/src/dynamicMesh/dynamicFvMesh/lnInclude     -I/home/khw32/foam/foam-extend-4.0/src/meshTools/lnInclude     -I/home/khw32/foam/foam-extend-4.0/src/tetFiniteElement/lnInclude -IlnInclude -I. -I/home/khw32/foam/foam-extend-4.0/src/foam/lnInclude -I/home/khw32/foam/foam-extend-4.0/src/OSspecific/POSIX/lnInclude   -fPIC -c $SOURCE -o Make/linux64GccDPOpt/fsiRK4Foam.o
In file included from fsiRK4Foam.C:55:0:
createPoissonMatrix.H: In function ‘int main(int, char**)’:
createPoissonMatrix.H:3:16: error: ‘p_’ was not declared in this scope
 fvm::laplacian(p_)
                ^
createPoissonMatrix.H:5:19: error: ‘pRefCell’ was not declared in this scope
 pEqn.setReference(pRefCell, pRefValue);
                   ^
createPoissonMatrix.H:5:29: error: ‘pRefValue’ was not declared in this scope
 pEqn.setReference(pRefCell, pRefValue);
                             ^
fsiRK4Foam.dep:835: recipe for target 'Make/linux64GccDPOpt/fsiRK4Foam.o' failed
make: *** [Make/linux64GccDPOpt/fsiRK4Foam.o] Error 1
